--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "KonusarakOgren",
-  "displayName": "KonusarakOgren"
+  "name": "konusarak_ogren",
+  "displayName": "konusarak_ogren"
 }
