--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.13.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.7.0",
     "@reduxjs/toolkit": "^2.11.0",
+    "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-paper": "^5.14.5",
