--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "server": "node server/index.js"
   },
   "dependencies": {
     "@huggingface/inference": "^4.13.3",
@@ -18,6 +19,11 @@
     "@react-navigation/native-stack": "^7.7.0",
     "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
+    "openai": "^6.9.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-paper": "^5.14.5",
